# eqmap

./: .gitattributes  Cargo.toml  README.md  REWRITE_FILE_GUIDE.md  maj-inv2.celllang  runTests.sh
.github/workflows/: docs.yml  rust.yml  verify.yml
asplos/sections/: 04-results.tex
ece6745/: main.tex  references.bib
ece6745/data/: ilp.csv  results.csv
examples/: asic_rewrites.txt  gate_rules.txt  lut_shannon_rules.txt
iccad/: references.bib
iccad/sections/: 00-intro.tex  03-rewrites.tex  07-acknowledgements.tex
rules/: analog-pim.celllang  asic.celllang  example.celllang  extra.cellang  maj-inv.celllang  nangate.celllang
src/: analysis.rs  asic.rs  check.rs  cost.rs  driver.rs  dyn_extractor.rs  file_rewrites.rs  fuzz.rs  lib.rs  logic.rs  lut.rs  netlist.rs  parse.rs  pass.rs  rewrite.rs  rewrite_file.rs  serialize.rs  timing.rs  verilog.rs
tests/: timing.rs
tests/asic/: cla.txt  cla.v  filter.v  rewrite_file.txt  simple.v  simple_1_output.v  simple_2_output.v
tests/disassemble/: full_adder.v  mux_l4.v
tests/driver/: add_synth.v  big_decimal.v  gate_test.v  mux_reg.v  rewrite_bug.v  unused_input.v
tests/emitter/: parity_checker.txt
tests/lutlang/: 4-to-1-aig.txt  4-to-1-mux.txt  bus.txt  circuit.txt  gate_compare.txt  ilp_examples.txt  invariance_examples.txt  lut.txt  mux-with-match-cuts.txt  mux.txt  reg.txt
tests/reg/: cycles.txt  mux_retime.txt
tests/verify/: add_synth.v  c17.v  c1908.v  c432.v  c7552.v  c880.v
tests/verilog/: fdre.v  fdre_roundtrip.v  half_adder.v  mux_reg.v  roundtrip.v
utils/: min-coverage.py  paths.py  runTests.sh  setup.sh  test-runner.py
verilog/: README.md  bitblast.v  celllang.v  equiv.sh  lutlang.v  simlib.v
verilog/nl_opt/: feedback.v  script.sh
verilog/pim-submodules/: abs_nbit.v  adder_1bit.v  adder_1bit_half.v  adder_nbit_cout.v  eq_nbit.v  gt_int_nbit.v  gt_uint_nbit.v  lt_int_nbit.v  mul_full_2bit.v  mul_full_4bit.v  mul_partial_4bit.v  mul_partial_8bit.v  multiplier_nbit.v  mux_nbit.v  ne_nbit.v  not_nbit.v  or_nbit.v  shift_l_nbit.v  shift_r_nbit.v  shift_r_nbit_arith.v  subtractor_1bit.v  subtractor_1bit_cmp.v  xnor_nbit.v  xor_nbit.v
verilog/pimsynth/: convert_format.py  gen_pim_histogram.py  run_analog_benchmarks.sh
verilog/pimsynth/benchmarks/: abs_int16.v  abs_int32.v  abs_int64.v  abs_int8.v  add_int16.v  add_int32.v  add_int64.v  add_int8.v  add_sub_int32.v  aes_inverse_sbox.v  aes_sbox.compiled.v  aes_sbox.v  aes_sbox_usuba.v  and_int1.v  and_int16.v  and_int32.v  and_int64.v  and_int8.v  eq_int16.v  eq_int32.v  eq_int64.v  eq_int8.v  gt_int32.v  gt_int64.v  gt_int8.v  gt_uint16.v  gt_uint32.v  gt_uint64.v  gt_uint8.v  lt_int32.v  lt_int64.v  lt_int8.v  lt_uint16.v  lt_uint32.v  lt_uint64.v  lt_uint8.v  max_int32.v  max_int64.v  max_int8.v  max_uint16.v  (+63 more)
verilog/pimsynth/submodules/: adder_1bit_half.v  adder_nbit.v  and_nbit.v  lt_uint_nbit.v  mul_partial_2bit.v  multiplier_nbit.v  ne_nbit.v  shift_l_nbit.v  subtractor_nbit.v
